# cli-template

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  index.html  release-plz.toml
.claude/skills/setup/: SKILL.md
.github/workflows/: build-binaries.yml  ci.yml  lint.yml  pages.yml  publish-npm.yml  publish.yml  release-pr.yml  release.yml  rust.yml
assets/: index-B8rJLzks.css  index-C-Z-Kh8Q.js  index-CeYdlxuw.css  index-CimjViFn.css  index-JXeltsT6.css  index-XwJ19QKu.css
crates/agent-describe/: Cargo.toml
crates/agent-describe-derive/: Cargo.toml
crates/agent-describe-derive/src/: lib.rs
crates/agent-describe/examples/: demo_cli.rs
crates/agent-describe/src/: lib.rs  response.rs  schema.rs
crates/agent-describe/tests/: derive_test.rs  response_test.rs
docs/: 404.html  cicd-release.html  getting-started.html  index.html  npx-distribution.html  print.html  toc-9c0fa5fd.js  toc.html
docs/css/: variables-15251ad2.css
docs/guide/: adding-commands.html  configuration.html  error-handling.html  project-structure.html
docs/guides/: agent-quickstart.md
docs/plans/: 2026-03-24-github-pages-design.md  2026-03-24-skills-npx-docs-design.md  2026-03-25-agent-quickstart-design.md  2026-03-26-release-setup-command-design.md  2026-03-26-release-setup-command-plan.md  2026-03-27-agent-describe.md
docs/theme/: rara-de27937f.css
npm/: .gitignore  README.md  package.json
npm/scripts/: postinstall.js
src/: app_config.rs  cli.rs  error.rs  lib.rs  main.rs  paths.rs  post_setup.rs  setup.rs  template.rs
src/agent/: backend.rs  config.rs  executor.rs  mod.rs
src/cli/: mod.rs
template/: CLAUDE.md  Cargo.toml  README.md  cargo-generate.toml  cliff.toml  justfile
template/.github/workflows/: pages.yml
template/docs/guides/: agent-quickstart.md
template/npm/: package.json
template/src/: app_config.rs  error.rs  lib.rs  main.rs  paths.rs  response.rs
template/src/agent/: backend.rs  executor.rs
template/src/cli/: mod.rs
template/tests/: cli_smoke.rs  cli_test.rs
template/tests/common/: mod.rs
template/web/: index.html  package-lock.json  vite.config.ts
template/web/docs/: book.toml
template/web/docs/src/: README.md  SUMMARY.md  cicd-release.md  npx-distribution.md
template/web/docs/src/guide/: adding-commands.md  error-handling.md
template/web/src/components/: Card.astro  CardGrid.astro  Footer.astro  Header.astro  Hero.astro  Highlight.astro  Terminal.astro
template/web/src/layouts/: Base.astro
template/web/src/pages/: index.astro
template/web/src/scripts/: reveal.ts
template/web/src/styles/: global.css
tests/: setup_test.rs
web/: index.html  vite.config.ts
web/docs/: book.toml
web/docs/src/: getting-started.md
web/docs/src/guide/: configuration.md  project-structure.md
web/docs/theme/: index.hbs  rara.css
web/src/: main.ts  style.css
