[package]
name = "{{project-name}}"
version = "0.1.0"
edition = "2024"
description = "TODO: describe your CLI"
license = "MIT"
repository = "https://github.com/rararulab/{{project-name}}"

[dependencies]
# Add `bon = "3"` when you have structs with 3+ fields (see docs/guides/rust-style.md)
# Add `chrono = { version = "0.4", features = ["serde"] }` when you need date/time
clap = { version = "4", features = ["derive"] }
config = "0.15"
dirs = "6"
reqwest = { version = "0.13", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
snafu = "0.9"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"

[lints.rust]
unsafe_code = "deny"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
redundant_pub_crate = "allow"
