[workspace]
members = ["crates/agent-describe", "crates/agent-describe-derive"]
resolver = "2"

[package]
name = "rara-cli-template"
version = "0.1.0"
edition = "2024"
description = "Scaffold new Rust CLI projects from the rara-cli-template"
license = "MIT"
repository = "https://github.com/rararulab/cli-template"
homepage = "https://github.com/rararulab/cli-template"

[[bin]]
name = "rara-cli-template"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
include_dir = "0.7"
snafu = "0.9"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"

[lints.rust]
unsafe_code = "deny"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
redundant_pub_crate = "allow"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for cargo-dist — generates release binaries + Homebrew formula
[workspace.metadata.dist]
cargo-dist-version = "0.31.0"
ci = "github"
installers = ["shell", "homebrew"]
targets = ["aarch64-apple-darwin", "x86_64-unknown-linux-gnu"]
tap = "rararulab/homebrew-tap"
publish-jobs = ["homebrew"]
install-path = "CARGO_HOME"
