[package]
name = "agent-describe"
version = "0.1.0"
edition = "2024"
description = "Self-describing CLI protocol for AI agents"
license = "MIT"
repository = "https://github.com/rararulab/agent-describe"

[dependencies]
agent-describe-derive = { path = "../agent-describe-derive", version = "0.1.0" }
clap = { version = "4", features = ["derive"] }
schemars = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
